--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -800,36 +800,36 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="KvV-wM-mVc" customClass="MovieCollectionViewCell" customModule="PalCine" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="20" width="155" height="290"/>
+                                        <rect key="frame" x="0.0" y="20" width="130" height="235"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="155" height="290"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="130" height="235"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="e0Y-jc-fi7">
-                                                    <rect key="frame" x="0.0" y="0.0" width="155" height="232"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="130" height="180"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="232" id="bOM-aP-jtA"/>
+                                                        <constraint firstAttribute="height" constant="180" id="bOM-aP-jtA"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hYv-Bf-tBn">
-                                                    <rect key="frame" x="8" y="231" width="139" height="39"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="750" verticalCompressionResistancePriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="1" translatesAutoresizingMaskIntoConstraints="NO" id="hYv-Bf-tBn">
+                                                    <rect key="frame" x="0.0" y="179" width="130" height="31"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="753" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="raB-jZ-qZ5">
-                                                    <rect key="frame" x="8" y="270" width="81" height="20"/>
+                                                    <rect key="frame" x="0.0" y="210" width="130" height="20"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DHh-dh-CNj">
-                                                            <rect key="frame" x="0.0" y="3" width="40.5" height="14.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <rect key="frame" x="0.0" y="4" width="65" height="12"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                             <color key="textColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wa-fm-8ED">
-                                                            <rect key="frame" x="40.5" y="1" width="40.5" height="18"/>
-                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                            <rect key="frame" x="65" y="2" width="65" height="16"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                                             <color key="textColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -843,17 +843,17 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="e0Y-jc-fi7" secondAttribute="trailing" id="3ij-O6-dOW"/>
-                                            <constraint firstItem="raB-jZ-qZ5" firstAttribute="leading" secondItem="KvV-wM-mVc" secondAttribute="leading" constant="8" id="4NZ-a1-5Of"/>
-                                            <constraint firstItem="hYv-Bf-tBn" firstAttribute="leading" secondItem="KvV-wM-mVc" secondAttribute="leadingMargin" id="8cl-fM-frG"/>
+                                            <constraint firstItem="raB-jZ-qZ5" firstAttribute="leading" secondItem="KvV-wM-mVc" secondAttribute="leading" id="4NZ-a1-5Of"/>
+                                            <constraint firstItem="hYv-Bf-tBn" firstAttribute="leading" secondItem="KvV-wM-mVc" secondAttribute="leadingMargin" constant="-8" id="8cl-fM-frG"/>
                                             <constraint firstItem="hYv-Bf-tBn" firstAttribute="top" secondItem="e0Y-jc-fi7" secondAttribute="bottom" constant="-1" id="DQM-HM-4p4"/>
                                             <constraint firstItem="e0Y-jc-fi7" firstAttribute="leading" secondItem="KvV-wM-mVc" secondAttribute="leading" id="PNB-OH-nVg"/>
                                             <constraint firstItem="e0Y-jc-fi7" firstAttribute="top" secondItem="KvV-wM-mVc" secondAttribute="top" id="XwB-1U-lBz"/>
-                                            <constraint firstAttribute="trailing" secondItem="raB-jZ-qZ5" secondAttribute="trailing" constant="66" id="fyl-z0-Ekv"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="hYv-Bf-tBn" secondAttribute="trailing" id="jtn-AC-AYe"/>
+                                            <constraint firstAttribute="trailing" secondItem="raB-jZ-qZ5" secondAttribute="trailing" id="fyl-z0-Ekv"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="hYv-Bf-tBn" secondAttribute="trailing" constant="-8" id="jtn-AC-AYe"/>
                                             <constraint firstItem="raB-jZ-qZ5" firstAttribute="top" secondItem="hYv-Bf-tBn" secondAttribute="bottom" id="uOM-9I-UJv"/>
-                                            <constraint firstAttribute="bottom" secondItem="raB-jZ-qZ5" secondAttribute="bottom" id="vTk-xh-Dh6"/>
+                                            <constraint firstAttribute="bottom" secondItem="raB-jZ-qZ5" secondAttribute="bottom" constant="5" id="vTk-xh-Dh6"/>
                                         </constraints>
-                                        <size key="customSize" width="155" height="290"/>
+                                        <size key="customSize" width="130" height="235"/>
                                         <connections>
                                             <outlet property="posterImageView" destination="e0Y-jc-fi7" id="B4j-WC-poY"/>
                                             <outlet property="ratingDescLabel" destination="DHh-dh-CNj" id="8a7-IB-psf"/>
@@ -868,7 +868,7 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.94575553470187712" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="LJC-0p-CSC" firstAttribute="leading" secondItem="dBD-Ny-MAa" secondAttribute="leading" id="7Wd-Cg-cKY"/>
                             <constraint firstAttribute="trailing" secondItem="LJC-0p-CSC" secondAttribute="trailing" id="TZf-8V-lrb"/>
