added: netNotificationView in DetailsViewController

--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -989,6 +989,6 @@
         <image name="posterPlaceholder" width="465" height="567"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Hwe-Ze-ef2"/>
+        <segue reference="Upt-od-PFS"/>
     </inferredMetricsTieBreakers>
 </document>
