fix: CurveShape drawing

--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -36,9 +36,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Pp7-7Z-JBT" firstAttribute="top" secondItem="cpt-6m-u8F" secondAttribute="bottom" constant="-20" id="604-oM-RdB"/>
+                            <constraint firstItem="Pp7-7Z-JBT" firstAttribute="top" secondItem="XeU-8W-aIc" secondAttribute="top" id="604-oM-RdB"/>
                             <constraint firstItem="h5l-hb-sFd" firstAttribute="top" secondItem="ao1-Ha-Ezx" secondAttribute="bottom" constant="26" id="KDi-N8-otQ"/>
-                            <constraint firstItem="YvV-Ec-6A8" firstAttribute="top" secondItem="Pp7-7Z-JBT" secondAttribute="bottom" id="Mrt-qG-jPU"/>
+                            <constraint firstAttribute="bottom" secondItem="Pp7-7Z-JBT" secondAttribute="bottom" id="Mrt-qG-jPU"/>
                             <constraint firstItem="YvV-Ec-6A8" firstAttribute="top" secondItem="h5l-hb-sFd" secondAttribute="bottom" constant="120" id="OH9-XT-07I"/>
                             <constraint firstItem="h5l-hb-sFd" firstAttribute="leading" secondItem="XeU-8W-aIc" secondAttribute="leadingMargin" id="PMw-LI-DLm"/>
                             <constraint firstItem="ao1-Ha-Ezx" firstAttribute="centerX" secondItem="XeU-8W-aIc" secondAttribute="centerX" id="PQ4-QX-YGJ"/>
@@ -740,22 +740,17 @@
                                     <constraint firstItem="Q8I-0O-AJH" firstAttribute="leading" secondItem="E98-iJ-2MI" secondAttribute="leading" id="zX9-wm-EA4"/>
                                 </constraints>
                             </scrollView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SAv-1f-cfQ">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SAv-1f-cfQ">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="yuh-Pl-7Xj"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="I06-XI-DKc" firstAttribute="top" secondItem="E98-iJ-2MI" secondAttribute="bottom" id="5Of-Li-84K"/>
                             <constraint firstAttribute="trailing" secondItem="CKJ-kP-wdL" secondAttribute="trailing" id="Dp8-IV-a8d"/>
-                            <constraint firstItem="SAv-1f-cfQ" firstAttribute="leading" secondItem="C1f-Lo-rV9" secondAttribute="leading" id="Kes-wX-NfU"/>
-                            <constraint firstAttribute="trailing" secondItem="SAv-1f-cfQ" secondAttribute="trailing" id="MQY-Bv-xzO"/>
                             <constraint firstItem="CKJ-kP-wdL" firstAttribute="leading" secondItem="C1f-Lo-rV9" secondAttribute="leading" id="T9R-Xb-azZ"/>
-                            <constraint firstItem="SAv-1f-cfQ" firstAttribute="top" secondItem="C1f-Lo-rV9" secondAttribute="top" id="beX-R4-Oya"/>
                             <constraint firstItem="CKJ-kP-wdL" firstAttribute="top" secondItem="C1f-Lo-rV9" secondAttribute="top" id="fzX-Vf-ekZ"/>
                             <constraint firstItem="E98-iJ-2MI" firstAttribute="leading" secondItem="C1f-Lo-rV9" secondAttribute="leading" id="hi1-Pr-xlF"/>
                             <constraint firstAttribute="trailing" secondItem="E98-iJ-2MI" secondAttribute="trailing" id="uLQ-fP-fSE"/>
