--- a/PalCine/Base.lproj/LaunchScreen.storyboard
+++ b/PalCine/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -27,9 +27,9 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="cqu-MX-NJO" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="N9m-Y3-nsV"/>
+                            <constraint firstItem="cqu-MX-NJO" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="N9m-Y3-nsV"/>
                             <constraint firstItem="cqu-MX-NJO" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="RiK-40-QJb"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="cqu-MX-NJO" secondAttribute="bottom" id="bNM-rg-LwO"/>
+                            <constraint firstAttribute="bottom" secondItem="cqu-MX-NJO" secondAttribute="bottom" id="bNM-rg-LwO"/>
                             <constraint firstAttribute="trailing" secondItem="cqu-MX-NJO" secondAttribute="trailing" id="rq2-Ew-gXU"/>
                         </constraints>
                     </view>
